nxos_fabric/nxos_singlesite/k8s_kind/k02/cilium/manifests/validation/network-policy/50-fqdn/policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-tiefighter-example-fqdn
  namespace: cilium-lab-policy
spec:
  endpointSelector:
    matchLabels:
      app: tiefighter
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: www.example.com
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
